--- a/index.html
+++ b/index.html
@@ -4,12 +4,112 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Alpha Clash <Prog></Prog>
-  </title>
+  <title>Alpha Clash Pro</title>
+  <!-- Daisy UI and Tailwind Integration -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <!-- Google Font Integration -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Anton&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
+  <!-- custom CSS -->
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
+  <main
+    class="bg-[#010313] bg-[url(images/background.png)] bg-center bg-no-repeat min-h-screen text-white font-poppins font-medium">
+    <section id="home" class="home flex flex-col justify-center items-center min-h-screen ">
+      <div class="flex flex-col items-center space-y-3 justify-center">
+        <h1 class="text-9xl font-anton">ALPHABET CLASH</h1>
+        <p class="text-[24px] font-medium">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+        <button id="first-play-btn" onclick="playBtn()"
+          class=" bg-white text-black font-semibold text-[24px] px-7 h-14 rounded-md cursor-pointer">Play
+          Now</button>
+      </div>
+    </section>
+    <!-- playground start -->
+    <section id="playStart" class="playground flex flex-col justify-between items-center min-h-screen py-20 hidden">
+      <!-- Screen  -->
+      <div
+        class="flex flex-col bg-[#ffffffb3] min-h-[350px] justify-center items-center relative border-[20px] border-[#010313cc] rounded-lg w-3/4  ">
+        <div class="
+        flex flex-col items-center justify-center absolute top-0 ">
+          <p class="text-white font-medium text-center text-lg bg-[#2F2941] px-6 py-3 mt-[-15px] rounded-b-lg">Don't
+            watch
+            keyboard
+            while
+            playing...</p>
+        </div>
+        <div class="text-black text-center min-h-full">
+          <h1 id="alphabetScreen" class="text-9xl font-extrabold ">Y</h1>
+        </div>
+      </div>
+      <!-- Keyboard  -->
+      <div class="text-black font-bold ">
+        <div class="my-1 flex w-full justify-center gap-1 ">
+          <kbd id="q" class="kbd text-lg p-4 ">q</kbd>
+          <kbd id="w" class="kbd text-lg p-4 ">w</kbd>
+          <kbd id="e" class="kbd text-lg p-4 ">e</kbd>
+          <kbd id="r" class="kbd text-lg p-4 ">r</kbd>
+          <kbd id="t" class="kbd text-lg p-4 ">t</kbd>
+          <kbd id="y" class="kbd text-lg p-4 ">y</kbd>
+          <kbd id="u" class="kbd text-lg p-4 ">u</kbd>
+          <kbd id="i" class="kbd text-lg p-4 ">i</kbd>
+          <kbd id="o" class="kbd text-lg p-4 ">o</kbd>
+          <kbd id="p" class="kbd text-lg p-4 ">p</kbd>
+        </div>
+        <div class="my-1 flex w-full justify-center gap-1 text-lg">
+          <kbd id="s" class="kbd text-lg p-4 ">s</kbd>
+          <kbd id="a" class="kbd text-lg p-4 ">a</kbd>
+          <kbd id="d" class="kbd text-lg p-4 ">d</kbd>
+          <kbd id="f" class="kbd text-lg p-4 ">f</kbd>
+          <kbd id="g" class="kbd text-lg p-4 ">g</kbd>
+          <kbd id="h" class="kbd text-lg p-4 ">h</kbd>
+          <kbd id="j" class="kbd text-lg p-4 ">j</kbd>
+          <kbd id="k" class="kbd text-lg p-4 ">k</kbd>
+          <kbd id="l" class="kbd text-lg p-4 ">l</kbd>
+        </div>
+        <div class="my-1 flex w-full justify-center gap-1">
+          <kbd id="z" class="kbd text-lg p-4 ">z</kbd>
+          <kbd id="x" class="kbd text-lg p-4 ">x</kbd>
+          <kbd id="c" class="kbd text-lg p-4 ">c</kbd>
+          <kbd id="v" class="kbd text-lg p-4 ">v</kbd>
+          <kbd id="b" class="kbd text-lg p-4 ">b</kbd>
+          <kbd id="n" class="kbd text-lg p-4 ">n</kbd>
+          <kbd id="m" class="kbd text-lg p-4 ">m</kbd>
+          <kbd id="/" class="kbd text-lg p-4 ">/</kbd>
+        </div>
+      </div>
+      <!-- Button -->
+      <div class="flex justify-between w-3/4">
+        <button class="btn bg-[#894189] rounded-full text-white border-none text-lg px-6 py-4">
+          Life
+          <img src="images/Group 23.svg" alt="">
+          <span>1</span>
+        </button>
+        <button class="btn bg-[#360490] rounded-full text-white border-none text-lg px-6 py-4">
+          Score
+          <img src="images/monetization_on.svg" alt="">
+          <span>1</span>
+        </button>
+      </div>
 
+    </section>
+    <!-- playground end -->
+    <section class="score flex flex-col justify-center items-center min-h-screen hidden">
+      <div
+        class="flex flex-col justify-center items-center bg-[#FFFFFF33] w-[500px] h-[350px] text-center p-10 rounded-lg space-y-4 border-[2px] border-[#ffffff33]">
+        <h1><span class="text-7xl font-semibold ">Score: <span class="text-white text-7xl ">14</span></span></h1>
+        <button class="btn bg-white text-black text-lg px-6 py-7 ">Play Again</button>
+        <p class="text-lg text-white text-center">Practice will make you Pro</p>
+      </div>
+    </section>
+  </main>
+  <script src="Script/utility.js"></script>
+  <script src="Script/alpha.js"></script>
 </body>
 
 </html>
