--- a/index.html
+++ b/index.html
@@ -84,16 +84,20 @@
         </div>
       </div>
       <!-- Button -->
-      <div class="flex justify-between w-3/4">
+      <div class="flex justify-between w-3/4 items-center">
         <button class="btn bg-[#894189] rounded-full text-white border-none text-lg px-6 py-4">
           Life
           <img src="images/Group 23.svg" alt="">
-          <span>1</span>
+          <span id="life">5</span>
         </button>
+        <p class="text-center">If you press the wrong key, you lose your life. If you press the correct key ,<br> your
+          score will be
+          increased
+          one by one</p>
         <button class="btn bg-[#360490] rounded-full text-white border-none text-lg px-6 py-4">
           Score
           <img src="images/monetization_on.svg" alt="">
-          <span>1</span>
+          <span id="score">0</span>
         </button>
       </div>
 
