khuchra kichu added

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     <section id="finalScoreScreen" class="score flex flex-col justify-center items-center min-h-screen hidden">
       <div
         class="flex flex-col justify-center items-center bg-[#FFFFFF33] w-[500px] h-[350px] text-center p-10 rounded-lg space-y-4 border-[2px] border-[#ffffff33]">
+        <h2 class="text-3xl text-white font-bold">Game Over!</h2>
         <h1><span class="text-7xl font-semibold ">Score: <span id="finalScore"
               class="text-white text-7xl ">14</span></span></h1>
         <button onclick="playAgain()" class="btn bg-white text-black text-lg px-6 py-7 ">Play Again</button>
