Final cmmit again

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <!-- playground start -->
     <section id="playStart" class="playground flex flex-col justify-between items-center min-h-screen py-20 hidden">
       <!-- Screen  -->
+      <p class="text-white text-xl text-bold text-center">Press <span class="bg-slate-900 p-3 rounded-xl">Esc</span>
+        button to Exit
+        the game</p>
       <div
         class="flex flex-col bg-[#ffffffb3] min-h-[350px] justify-center items-center relative border-[20px] border-[#010313cc] rounded-lg w-3/4  ">
         <div class="
