--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
     <!-- playground start -->
     <section id="playStart" class="playground flex flex-col justify-between items-center min-h-screen py-20 hidden">
       <!-- Screen  -->
-      <p class="text-white text-xl text-bold text-center">Press <span class="bg-slate-900 p-3 rounded-xl">Esc</span>
+      <p class="text-white text-xl text-bold text-center mb-5">Press <span
+          class="bg-slate-900 p-3 rounded-xl">Esc</span>
         button to Exit
         the game</p>
       <div
-        class="flex flex-col bg-[#ffffffb3] min-h-[350px] justify-center items-center relative border-[20px] border-[#010313cc] rounded-lg w-3/4  ">
+        class="flex flex-col bg-[#ffffffb3] min-h-[300px] justify-center items-center relative border-[20px] border-[#010313cc] rounded-lg w-3/4 mb-5 ">
         <div class="
         flex flex-col items-center justify-center absolute top-0 ">
           <p class="text-white font-medium text-center text-lg bg-[#2F2941] px-6 py-3 mt-[-15px] rounded-b-lg">Don't
@@ -51,7 +52,7 @@
         </div>
       </div>
       <!-- Keyboard  -->
-      <div class="text-black font-bold ">
+      <div class="text-black font-bold mb-5">
         <div class="my-1 flex w-full justify-center gap-1 ">
           <kbd id="q" class="kbd text-lg p-4 ">q</kbd>
           <kbd id="w" class="kbd text-lg p-4 ">w</kbd>
